[build-system]
requires = [
  "setuptools>=61.0",
  "requests>=2.18.4"
]
build-backend = "setuptools.build_meta"

[project]
name = "redcap_api"
version = "0.1.0"
authors = [
  { name="NACC", email="nacchelp@uw.edu" },
]
description = "Library for interacting with the REDCap API.."
readme = "README.md"
requires-python = ">=3.11"
