[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redcap-api"
version = "0.1.3"
description = "Library for interacting with the REDCap API"
license-files = ["LICENSE"]
authors = [{ name = "NACC", email = "nacchelp@uw.edu" }]
readme = "README.md"
dependencies = [
    "requests",
    "ratelimit",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/naccdata/redcap-api"
Repository = "https://github.com/naccdata/redcap-api"

[tool.setuptools]
packages = ["redcap_api"]
